[project]
name = "fastshareapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
]
